--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,8 +9,7 @@
       "changelog-path": "CHANGELOG.md",
       "versioning": "default",
       "include-component-in-tag": false,
-      "include-v-in-tag": true,
-      "pull-request-title-pattern": "chore${scope}: release${component} ${version}"
+      "include-v-in-tag": true
     }
   }
 }
