--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,7 +1,7 @@
 {
   "bootstrap-sha": "bab3c068a4d76d90839f2a666d31956bfc827f8a",
   "release-type": "node",
-  "draft": true,
+  "draft": false,
   "prerelease": false,
   "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": false,
