--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,12 +1,16 @@
 {
   "bootstrap-sha": "bab3c068a4d76d90839f2a666d31956bfc827f8a",
-  "release-type": "node",
-  "draft": false,
-  "prerelease": false,
-  "bump-minor-pre-major": true,
-  "bump-patch-for-minor-pre-major": false,
-  "changelog-path": "CHANGELOG.md",
-  "versioning": "default",
-  "include-component-in-tag": false,
-  "include-v-in-tag": true
+  "packages": {
+    ".": {
+      "release-type": "node",
+      "draft": false,
+      "prerelease": false,
+      "bump-minor-pre-major": true,
+      "bump-patch-for-minor-pre-major": false,
+      "changelog-path": "CHANGELOG.md",
+      "versioning": "default",
+      "include-component-in-tag": false,
+      "include-v-in-tag": true
+    }
+  }
 }
