--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,16 +1,16 @@
 {
+  "bootstrap-sha": "a1b1288bcfbd5c497f9b3e18c451a3f774a8fc5d",
   "packages": {
     ".": {
       "release-type": "node",
-      "draft": false,
+      "draft": true,
       "prerelease": false,
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": false,
       "changelog-path": "CHANGELOG.md",
       "versioning": "default",
       "include-component-in-tag": false,
-      "include-v-in-tag": true,
-      "pull-request-title-pattern": "chore${scope}: release${component} ${version}"
+      "include-v-in-tag": true
     }
   }
 }
