--- a/release-please-config.json
+++ b/release-please-config.json
@@ -10,7 +10,7 @@
       "versioning": "default",
       "include-component-in-tag": false,
       "include-v-in-tag": true,
-      "pull-request-title-pattern": "chore${scope}: release${component} ${version}"
+      "pull-request-title-pattern": "chore${scope}: release ${version}"
     }
   }
 }
