chore: update config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,7 +9,7 @@
       "changelog-path": "CHANGELOG.md",
       "versioning": "default",
       "include-component-in-tag": false,
-      "include-v-in-tag": true,
+      "include-v-in-tag": false,
       "pull-request-title-pattern": "chore${scope}: release ${version}"
     }
   }
